# OS_labs

./: child.c  main.c  tree.h
osi1/: Отчёт по первой лабораторной по операционным системам.docx
osi2/: 1.in
osi3/: child.c  d_string.c  d_string.h  main.c  sync_constants.h  Отчёт по третьеё лабораторной работе по осям.docx
osi4/: CMakeLists.txt  dynamic_main.c  second_realization.c
osi4laba/: first_realization.c  realization.h  static_main.c  Отчёт по четвёртой лабораторной работе по операционным системам исправленный.docx  Отчёт по четвёртой лабораторной работе по операционным системам.docx
osi5-7/: client.cpp  file.txt  server.cpp  tree.h  Отчёт по 5-7 лабораторной работе по операционным системам.docx
osi8/: Отчёт по 8  лабораторной работе по операционным системам.docx
osi_kp/: README.md  dag.ini  main.cpp  Отчёт по курсовому проекту по операционным системам.docx
Вторая лабораторная работа/: lab.cpp  lab.h  main.cpp  Отчёт по второй лабораторной работе по операционным системам .docx  Отчёт по второй лабораторной работе по операционным системам исправленный (выделил clone).docx
